--- a/index.html
+++ b/index.html
@@ -60,7 +60,21 @@
                          <br>
                     <br></p>
                     <div id="projects" class="row about-contact">
-                        <div class="col-1 contact-1">
+                        <div class= "col-10 tools">
+                            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kristinhajinkim@gmail.com" target="_blank">
+                                <img src="img\tools\gmail.png" alt="gmail" class="tiny tool-image">
+                            </a>
+                            <a href="https://www.linkedin.com/in/kristinkimnj/" target="_blank">
+                                <img src="img\tools\linkedin.png" alt="linkedin" class=" tiny tool-image">
+                            </a>
+                            <a href="https://www.linkedin.com/in/kristinkimnj/" target="_blank">
+                                <img src="img\tools\github.png" alt="github" class="tiny tool-image">
+                            </a>
+                            <a href="https://docs.google.com/document/d/e/2PACX-1vQiBdZuB7qMR3yZcZ_x4GiD_Kc0oX40K2c5sxZJ9fUBBFOe62Q2PYpGfWe6NTr-6A2j4NE6eBKGZzlq/pub" target="_blank">
+                                <img src="img\tools\resume.png" alt="resume" class="tiny tool-image">
+                            </a>
+                        </div>
+                        <!-- <div class="col-1 contact-1">
                             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kristinhajinkim@gmail.com" target="_blank">
                                 <img src="img\tools\gmail.png" alt="profilepic">
                             </a>
@@ -79,7 +93,7 @@
                             <a href="https://docs.google.com/document/d/15HZTdAoaL5B6ks7_Y5PQZL5f7JFk6Fc8SQJSw1Nc3Oo/edit?usp=sharing" target="_blank">
                                 <img src="img\tools\resume.png" alt="resume">
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -309,9 +323,6 @@
             <div class="col-6">
                 <h2 class="gallery-title">Gallery </h2>
             </div>
-            <div class="col-2">
-                <a href="flyers.html">Flyers</a>
-            </div>
             </div><br>       <br> 
             <header>
               <h4 style="font-family: Georgia, 'Times New Roman', Times, serif ;">“Photography is truth.”
@@ -326,7 +337,10 @@
               </div>
               <button id="btnNext"><span class="sr-only">Next </span>&rarr;</button>
             </footer>
-          </div>
+            <div style="align-self: center;">
+                <a href="flyers.html">Flyers</a>
+            </div>
+        </div>
         
         <br><br><hr class="line-after-projects"><br><br>
         <div id="connect" class="container shadow-lg p-3 mb-5 bg-white rounded">
@@ -358,7 +372,7 @@
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">Check me out</label>
                     </div> -->                
-                    <button type="submit" class="btn-sm btn-primary ">Send</button>
+                    <button type="submit" class="btn-sm btn-primary">Send</button>
                 </form>
             </div>
         </div>
